deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openhosting
  namespace: openhosting
spec:
  selector:
    app: openhosting
  ports:
    - port: 80
      targetPort: 3000
